--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Simple Snake</string>
-    <string name="score_label_text">Score:</string>
+    <string name="score_label_text">"Score: "</string>
     <string name="default_score_text">0</string>
     <string name="restart_button_text">RESTART</string>
     <string name="up_button_description">up</string>
